# gix-binocular

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.gitea/workflows/: build-ci.yaml  ci-demo.yaml  ci.yaml  demo.yaml
.github/workflows/: ci.yml
benches/: gitinfo.rs
crates/blame/: Cargo.toml
crates/blame/src/: lib.rs
crates/blame/src/extensions/: mod.rs  polars.rs
crates/blame/src/git/: blame.rs  commits.rs  metrics.rs  mod.rs  objects.rs
crates/blame/src/objects/: blame_entry.rs  blame_result.rs  blame_statistics.rs  mod.rs
crates/blame/src/preprocess/: input.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/cli/src/commands/: blame.rs  cmd.rs  commits.rs  diff.rs  output_format.rs
crates/commits/: Cargo.toml
crates/commits/src/: lib.rs
crates/commits/src/git/: metrics.rs  traverse.rs
crates/commits/tests/: Cargo.toml
crates/commits/tests/fixtures/: make_blame_repo.sh
crates/commits/tests/git/: mod.rs  traverse.rs
crates/commits/webassembly/: Cargo.toml  README.md
crates/commits/webassembly/react-app/: package-lock.json  package.json  tsconfig.json
crates/commits/webassembly/react-app/src/: App.tsx  main.tsx  wasm.tsx
crates/commits/webassembly/src/: external.rs  lib.rs  log.rs  web.rs
crates/commits/webassembly/src/fs/: mod.rs  web_dir.rs  web_file.rs
crates/diff/: Cargo.toml
crates/diff/src/: lib.rs
crates/diff/src/git/: blame.rs  commit.rs  metrics.rs  object.rs  traverse.rs
crates/diff/src/objects/: changes.rs  outcome.rs
crates/diff/src/utils/: blame_info.rs  git_helper.rs  thread_helper.rs
crates/diff/tests/: Cargo.toml
crates/diff/tests/git/: traverse.rs
crates/ffi/: Cargo.toml  uniffi.toml
crates/ffi/src/: lib.rs
crates/ffi/src/types/: blame.rs  branch.rs  commit.rs  diff.rs  repo.rs  signature.rs
crates/neon-npm/: Cargo.toml  README.md  package-lock.json  package.json  test.js
crates/neon-npm/src/: lib.rs
crates/opfs/: Cargo.toml
crates/opfs/src/: answer.rs  channel.rs  lib.rs  message.rs
crates/opfs/src/action/: metadata.rs  mod.rs  read_dir.rs  read_file.rs
crates/opfs/src/opfs/: opfs.rs
crates/opfs/src/wasm32/: file.rs  metadata.rs  read_dir.rs
crates/pyo3-bindings/: Cargo.toml  README.md  commit.py  pyproject.toml  test.py
crates/pyo3-bindings/python/pygix_cartography/: __init__.py  pygix_cartography.pyi
crates/pyo3-bindings/python/pygix_cartography/commit/: __init__.py  __main__.py
crates/pyo3-bindings/python/pygix_cartography/diff/: __init__.py  __main__.py
crates/pyo3-bindings/src/: lib.rs  methods.rs  models.rs  tz_utils.rs
crates/python/: Cargo.toml  demo.ipynb  parquet.ipynb  pyproject.toml  test.py
crates/python/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: base.rs  csv.rs  json.rs  lib.rs  tabular.rs  utils.rs
crates/render/src/printer/: base.rs  csv.rs  json.rs  mod.rs  parquet.rs  tabular.rs  void.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  object.rs  signature.rs  tz_utils.rs
crates/shared/src/utils/: logging.rs
crates/webassembly/: Cargo.toml  build.sh  web-build.sh  worker-build.sh
crates/webassembly/crates/worker/: Cargo.toml
crates/webassembly/crates/worker/src/: file_worker.rs  lib.rs  worker.rs
crates/webassembly/react-app/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
crates/webassembly/react-app/public/: webfs-worker.js  worker.js
crates/webassembly/react-app/src/: App.tsx  ProducerConsumer.tsx  file-worker.ts  main.tsx  worker.ts
crates/webassembly/src/: channel.rs  external.rs  lib.rs  log.rs  utils.rs
crates/webassembly/src/browser/: mod.rs  navigator.rs  window.rs
crates/webassembly/src/browser/application/: fs.rs  web_dir.rs  web_file.rs  web_fs.rs
crates/webassembly/src/browser/opfs/: fs.rs  opfs_dir.rs  opfs_file.rs
kotlin/: pom.xml
kotlin/src/main/kotlin/com/inso_world/binocular/ffi/: BinocularFfi.kt
kotlin/src/main/kotlin/com/inso_world/binocular/ffi/exception/: FfiException.kt
kotlin/src/test/kotlin/com/inso_world/binocular/ffi/integration/: BinocularFfiTest.kt
kotlin/src/test/kotlin/com/inso_world/binocular/ffi/integration/base/: BaseFixturesIntegrationTest.kt  BaseIntegrationTest.kt  StreamGobbler.kt
kotlin/src/test/resources/fixtures/: advanced.sh  octo.sh  simple.sh
scripts/: gitcli.sh  measure.sh
src/: gitinfo.rs  log.rs  ls-tree.rs  parallel.rs
src/git/: metrics.rs  sig.rs  traverse.rs
src/utils/: git_helper.rs  logging.rs  structs.rs
tests/: utils.rs
