[package]
name = "gix-test"
edition = "2021"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["Manuel Stöger <manuel.stoeger@inso-world.com>"]
description = "gix testing"
documentation = "gix testing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gitinfo"
path = "src/gitinfo.rs"
doc = false
test = false
doctest = false

[[bin]]
name = "demo"
path = "src/demo.rs"
doc = false
test = false
doctest = false

[workspace]
members = [
    "crates/cli",
    "crates/diff",
    "crates/diff/tests",
    "crates/commits",
    "crates/commits/tests",
    "crates/commits/webassembly",
    "crates/render",
    "crates/shared",
    "crates/python",
    # "crates/neon-npm"
]

[workspace.dependencies]
#gix = { version = "0.66.0", default-features = false }
gix = { path = "../../se-analytics/gitoxide/gix", default-features = false }
clap = { version = "4.1.1", features = ["derive", "cargo"] }
clap_complete = "4.4.3"
log = "0.4.21"
env_logger = "0.11.3"
anyhow = "1.0.42"

[dependencies]
diff = { path = "./crates/diff", default-features = false }
commits = { path = "./crates/commits", version = "0.1.0", default-features = false }
cli = { path = "./crates/cli", version = "0.1.0", default-features = false }
render = { path = "./crates/render", version = "0.1.0", default-features = false }
shared = { path = "./crates/shared", default-features = false }

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true }
gix = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

comfy-table = "7.1.0"
# chrono = "0.4.38"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "gitinfo"
harness = false