[package]
name = "gix-test"
edition = "2021"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["Manuel Stöger <manuel.stoeger@inso-world.com>"]
description = "gix testing"
documentation = "gix testing"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gitinfo"
path = "src/gitinfo.rs"
doc = false
test = false
doctest = false

#[[bin]]
#name = "clone"
#path = "src/clone.rs"
#required-features = []
#doc = false
#test = false
#doctest = false

[workspace]
members = [
    "crates/cli",
    "crates/diff",
    "crates/diff/tests",
    "crates/commits",
    "crates/commits/tests",
    "crates/render",
    "crates/shared",
    "crates/blame",
    "crates/pyo3-bindings",
]

[workspace.dependencies]
gix = { version = "=0.70.0", default-features = false }
clap = { version = "4.1.1", features = ["derive", "cargo"] }
clap_complete = "4.4.3"
log = "0.4.21"
env_logger = "0.11.3"
anyhow = "1.0.42"


[dependencies]
dotenv = { version = "0.15.0" }
shared = { path = "./crates/shared", default-features = true }
commits = { path = "./crates/commits", default-features = false }
cartography-diff = { path = "./crates/diff", default-features = false }
render = { path = "./crates/render", default-features = false }
cli = { path = "./crates/cli", default-features = false }
cartography-blame = { path = "./crates/blame", default-features = false, features = ["cli"] }
clap = { workspace = true }
gix = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

comfy-table = "7.1.0"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = { version = "1.4.1" }

[[bench]]
name = "gitinfo"
harness = false
