[package]
name = "cartography-blame"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

autotests = false
include = ["src/**/*"]

[features]
"cli" = []

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
gix = { workspace = true, features = ["max-performance-safe", "revision", "blame"] }
#gix-odb = { version = "=0.67.0" }
#gix-blame = "0.0.0"
log = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.138" }
rayon = { version = "1.10.0" }
hashbrown = { version = "0.15.2", features = ["rayon"], default-features = true }
tqdm = { version = "0.7.0" }
crossbeam-channel = { version = "0.5.14" }
polars = { workspace = true }