[package]
name = "cartography-blame"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

autotests = false
include = ["src/**/*"]

[features]
"cli" = []

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
gix = { workspace = true, features = ["max-performance-safe", "revision", "blame"] }
log = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.138" }
tqdm = { version = "0.7.0" }
crossbeam-channel = { version = "0.5.14" }
polars = { workspace = true }