[package]
name = "binocular-blame"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

autotests = false
include = ["src/**/*"]

[features]
cli = ["preprocess"]
preprocess = []
progress = ["dep:tqdm"]
polars = ["dep:polars"]
cache = ["dep:duckdb"]
default = ["progress"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
gix = { workspace = true, features = ["max-performance-safe", "revision", "blame"] }
log = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.138" }
tqdm = { version = "0.7.0", optional = true }
crossbeam-channel = { version = "0.5.14" }
polars = { workspace = true, optional = true }
duckdb = { version = "1.2.1", optional = true, features = ["bundled"] }