[package]
name = "cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

autotests = false
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }