[package]
name = "commits"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
autotests = false
include = ["src/**/*"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = { workspace = true, features = ["max-performance-safe", "mailmap"] }
base64 = "0.22.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
log = { workspace = true }
anyhow = { workspace = true }
render = { path = "../render" }
shared = { path = "../shared" }
