[package]
name = "commits"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

autotests = false
include = ["src/**/*"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = { workspace = true, features = ["max-performance-safe", "mailmap"] }
base64 = "0.22.1"
log = { workspace = true }
anyhow = { workspace = true }
shared = { path = "../shared" }
polars = { workspace = true, features = ["lazy"] }
chrono = { workspace = true }

[dev-dependencies]
assertables = { version = "9.5.0" }
