[package]
name = "cartography-diff"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
autotests = false
include = ["src/**/*"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = { version = "0.5.14" }
gix = { workspace = true, features = ["max-performance-safe", "blob-diff", "revision", "mailmap", ] }
shared = { path = "../shared" }
render = { path = "../render" }
serde_json = "1.0.138"
derive_builder = { version = "0.20.2" }
tqdm = { version = "0.7.0" }

log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }