[package]
name = "neon-npm"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
gix = { workspace = true }
anyhow = { workspace = true }
diff = { path = "../diff", version = "0.1.0" }
csv = "1.3.0"