[package]
name = "opfs"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

autotests = false
include = ["src/**/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { workspace = true }
web-sys = { version = "0.3.72" }
web-fs = { path = "../../web-fs" }
console_error_panic_hook = "0.1.7"
wasm_thread = { git = "https://github.com/adamgerhant/wasm_thread.git", branch = "main", features = ["keep_worker_alive"] }
futures-channel-preview = "0.3.0-alpha.19"
futures = "0.3.31"
shared = { path = "../../crates/shared", default-features = false, features = ["wasm"] }
wasm-bindgen-futures = { version = "0.4.45", features = ["futures-core-03-stream"] }
wasm-streams = "0.4.2"