[package]
name = "opfs"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

autotests = false
include = ["src/**/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
log = { workspace = true }
async-std = { workspace = true }
wasm_thread = { workspace = true }
serde = { workspace = true }
web-sys = { workspace = true }
web-fs = { workspace = true }

futures-channel-preview = "0.3.0-alpha.19"
futures = "0.3.31"
shared = { path = "../../crates/shared", default-features = false, features = ["wasm"] }
wasm-bindgen-futures = { version = "0.4.45", features = ["futures-core-03-stream"] }
wasm-streams = "0.4.2"
tsify-next = { version = "0.5.4", default-features = true }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
