[package]
name = "pyo3-bindings"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
autotests = false
include = ["src/**/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "pygix_cartography"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "experimental-inspect", "chrono", "auto-initialize", "multiple-pymethods"], default-features = true }
pyo3-log = { version = "0.12.1" }
cartography-diff = { path = "../diff" }
commits = { path = "../commits" }
shared = { path = "../shared" }
chrono = { version = "0.4.39" }
gix-date = { version = "0.9.3" }

gix = { workspace = true }
anyhow = { workspace = true }