[package]
name = "render"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

autotests = false
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { path = "../cli" }
lazy_static = "1.5.0"
polars = { workspace = true, features = ["json", "csv", "parquet"] }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
assertables = { version = "9.5.0" }

[lib]
doctest = false