[package]
name = "shared"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm = []
std = ["default", "dep:env_logger"]
no_std = ["dep:no_std_io", "dep:defmt"]
# optionally use `std` by default, so that downstream could
# enable `no_std` using "default-features=false":
default = ["std"]

[dependencies]
log = { workspace = true }
env_logger = { workspace = true, optional = true }
chrono = "0.4.38"
no_std_io = { version = "0.6.0", optional = true }
defmt = { version = "0.3.8", optional = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
wasm_thread = { git = "https://github.com/adamgerhant/wasm_thread.git", branch = "main" }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
gix = { workspace = true }

[lib]
doctest = false