[package]
name = "shared"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm = []
std = ["default", "dep:env_logger"]
no_std = ["dep:no_std_io", "dep:defmt"]
# optionally use `std` by default, so that downstream could
# enable `no_std` using "default-features=false":
default = ["std"]

[dependencies]
log = { workspace = true }
env_logger = { workspace = true, optional = true }
chrono = { version = "0.4.39", features = ["serde"] }
no_std_io = { version = "0.6.0", optional = true }
defmt = { version = "0.3.8", optional = true }
gix = { workspace = true }
hashbrown = "0.15.2"
serde = { version = "1.0.217" }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }

[lib]
doctest = false