[package]
name = "diff-test"
version = "0.0.0"
edition = "2021"
publish = false

[[test]]
doctest = false
name = "diff"
path = "./main.rs"

[dev-dependencies]
gix-testtools = { version = "=0.15.0" }
gix = { workspace = true, features = ["max-performance-safe", "blob-diff", "revision", "mailmap", ] }
diff = { path = ".." }
shared = { path = "../../shared" }
pretty_assertions = { version = "1.4.1" }