[package]
name = "webfs-worker"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

autotests = false
include = ["src/**/*"]

[features]
standalone = []
default = ["standalone"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = false
lto = true

[dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = { version = "0.4.45", features = ["futures-core-03-stream"] }
wasm-streams = "0.4.2"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.72", features = [
    "console",
    "Window",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "DedicatedWorkerGlobalScope",
    "StorageManager",
    "WorkerOptions",
    "Worker",
    "Document",
    "HtmlElement",
    "EventTarget"
] }
web-fs = { path = "../../../../web-fs" }
futures-lite = "2.5.0"
gix-discover = { path = "../../../../../../gitoxide/gix-discover", default-features = false, features = ["wasm"] }
futures = "0.3.31"
log = "0.4.22"
console_log = { version = "1.0.0", features = ["color"] }
# wasm_thread = { git = "https://github.com/adamgerhant/wasm_thread.git", branch = "main", features = ["keep_worker_alive"] }
async-channel = "2.3.1"
async-std = "1.13.0"